ran updated participant models

--- a/fluency_cogsci2022.ipynb
+++ b/fluency_cogsci2022.ipynb
@@ -485,7 +485,7 @@
       "metadata": {
         "id": "9Fa39hPKfWI-"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -2018,9 +2018,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "49e38cd7-b33c-487a-fe9c-78ee49362641"
+        "outputId": "1c0bee65-daf2-424a-d16d-1e6e7c3520eb"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -2032,7 +2032,22 @@
             "SUBJECT 3/171 576\n",
             "SUBJECT 4/171 577\n",
             "SUBJECT 5/171 578\n",
-            "SUBJECT 6/171 579\n",
+            "SUBJECT 6/171 579\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:350: RuntimeWarning: overflow encountered in double_scalars\n",
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:351: RuntimeWarning: overflow encountered in power\n",
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:356: RuntimeWarning: invalid value encountered in double_scalars\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
             "SUBJECT 7/171 580\n",
             "SUBJECT 8/171 581\n",
             "SUBJECT 9/171 582\n",
@@ -2199,28 +2214,28 @@
             "SUBJECT 170/171 497\n",
             "SUBJECT 171/171 498\n",
             "Fits Complete.\n",
-            "    sid  time        ent   freq       sim      phon  simdropswitch  troyer\n",
-            "0    51  1448        cat  3.529  0.000000  0.000000              0       0\n",
-            "1    51  1449        dog  3.993  0.760946  0.000100              0       0\n",
-            "2    51  1450      mouse  2.989  0.301437  0.000100              1       1\n",
-            "3    51  1451        rat  3.221  0.465104  0.000100              0       0\n",
-            "4    51  1452    giraffe  1.887  0.335645  0.250000              1       1\n",
-            "..  ...   ...        ...    ...       ...       ...            ...     ...\n",
-            "22  498  3733       deer  2.648  0.534654  0.000100              0       0\n",
-            "23  498  3734  tarantula  1.672  0.262898  0.111111              0       1\n",
-            "24  498  3735     Fergie  0.500  0.068397  0.000100              1       1\n",
-            "25  498  3736   squirrel  2.447  0.148521  0.166667              0       1\n",
-            "26  498  3737    hamster  2.041  0.451015  0.000100              0       0\n",
+            "    sid  time        ent  ...  participantswitch  simdropswitch  troyer\n",
+            "0    51  1448        cat  ...                NaN              0       0\n",
+            "1    51  1449        dog  ...                NaN              0       0\n",
+            "2    51  1450      mouse  ...                NaN              1       1\n",
+            "3    51  1451        rat  ...                NaN              0       0\n",
+            "4    51  1452    giraffe  ...                NaN              1       1\n",
+            "..  ...   ...        ...  ...                ...            ...     ...\n",
+            "22  498  3733       deer  ...                NaN              0       0\n",
+            "23  498  3734  tarantula  ...                NaN              0       1\n",
+            "24  498  3735     Fergie  ...                NaN              1       1\n",
+            "25  498  3736   squirrel  ...                NaN              0       1\n",
+            "26  498  3737    hamster  ...                NaN              0       0\n",
             "\n",
-            "[6639 rows x 8 columns]\n",
-            "   subject  ...  errors_troyer_pglobaldynamic_random\n",
-            "0       51  ...                           232.669093\n",
-            "1      575  ...                           146.249144\n",
-            "2      576  ...                           398.861302\n",
-            "3      577  ...                           319.089042\n",
-            "4      578  ...                           252.612158\n",
+            "[6639 rows x 9 columns]\n",
+            "   subject  ...  errors_participant_pglobaldynamic_random\n",
+            "0       51  ...                                232.669093\n",
+            "1      575  ...                                146.249144\n",
+            "2      576  ...                                398.861302\n",
+            "3      577  ...                                319.089042\n",
+            "4      578  ...                                252.612158\n",
             "\n",
-            "[5 rows x 49 columns]\n",
+            "[5 rows x 68 columns]\n",
             "Results saved to '/content/drive/My Drive/IU-Abhilasha-Mike/Fluency/sem-phon/fluency_cogsci2022/'.\n"
           ]
         }
