--- a/fluency22-analyses.Rmd
+++ b/fluency22-analyses.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "fluency22_project"
+title: "fluencycogsci22_project"
 output:
   pdf_document: default
   html_document: default
@@ -22,18 +22,13 @@ This Rmd file contains the script for analyzing the fluency data. We first analy
 
 # Drive Download
 
-First we download the precomputed behavioral data from google drive.
+First we download the precomputed behavioral data.
 
 ```{r}
-
-fluency_data = read.csv(sprintf("https://docs.google.com/uc?id=%s&export=download", '1-0jRnKqXm-BHojltAZhPmZNFR8Bu1xqj')) %>% filter(domain == "animals")
-
-View(fluency_data %>% select(response, participant_designated_switch, simdrop, troyer,
-                             norm_phon, word2vec_similarity))
-
+fluency_data = read.csv("data/precomputed_data.csv") %>% filter(domain == "animals")
 ```
 
-# table 1 plot
+# Fig 1 plot
 
 ```{r}
 t1plot = fluency_data[1649:1653,] %>% 
@@ -98,9 +93,7 @@ Hmisc::rcorr(x$norm_phon, x$word2vec_similarity)
 # Retrieval order
 
 ```{r}
-
 ## combine semantic + phonological in one plot
-
 order_data = fluency_data %>% filter(norm_phon != -999 & norm_phon !=1) %>%
   group_by(domain,response_number) %>%
   summarise_at(vars(norm_phon, word2vec_similarity), mean) %>%
@@ -108,8 +101,10 @@ order_data = fluency_data %>% filter(norm_phon != -999 & norm_phon !=1) %>%
   pivot_longer(names_to = "similarity", cols =phonological:semantic )%>%
   mutate(similarity = fct_relevel(similarity, "semantic", "phonological"))%>%
   rename(`retrieval order` = response_number)
-
-  order_data %>%
+```
+## Fig 2 plot
+```{r}
+order_data %>%
   ggplot(aes(x = `retrieval order`, y = value, group = similarity, color = similarity)) +
   geom_point(alpha = 0.2)+
   geom_smooth(method = "lm")+
@@ -124,9 +119,10 @@ order_data = fluency_data %>% filter(norm_phon != -999 & norm_phon !=1) %>%
          plot.title = element_text(hjust = .5),
          strip.text.x = element_text(size = rel(2.5)),
          axis.text.x = element_text(size = rel(1)))
+```
 
-## lm
-
+## model
+```{r}
 order_model_data = fluency_data %>% filter(norm_phon != -999 & norm_phon !=1) %>%
   select(subject, domain, response_number, norm_phon, word2vec_similarity) %>%
   rename(phonological = norm_phon, semantic = word2vec_similarity)%>%
@@ -157,8 +153,11 @@ items_produced = fluency_data %>%
   rename(phonological = norm_phon, semantic = word2vec_similarity)%>%
   pivot_longer(names_to = "similarity", cols =phonological:semantic )%>%
   mutate(similarity = fct_relevel(similarity, "semantic", "phonological")) 
+```
 
-## plot
+## Fig 3 plot
+
+```{r}
 items_produced %>%
   ggplot(aes(x= value, y = items, color = similarity, group = similarity)) +
   geom_point(alpha = 0.2)+
@@ -174,8 +173,9 @@ geom_smooth(method = "lm")+
          plot.title = element_text(hjust = .5),
          strip.text.x = element_text(size = rel(2.5)),
          axis.text.x = element_text(size = rel(1)))
+```
 ## model
-
+```{r}
 ## unscale phon similarity for model
 
 items_produced = items_produced %>% 
@@ -188,14 +188,18 @@ itemmodel = lmer(data = items_produced,
 summary(itemmodel)
 ```
 
-# Switch models
+# Cluster/switch analyses
 ```{r}
 x = fluency_data %>% filter(norm_phon != -999 & norm_phon !=1)%>%
   filter(dataset== "LEA") 
 
 Hmisc::rcorr(x$participant_designated_switch, x$troyer)
 Hmisc::rcorr(x$participant_designated_switch, x$simdrop)
-## plots
+```
+
+## Fig 4 plot
+```{r}
+
 switchplotdata = fluency_data %>% filter(norm_phon != -999 & norm_phon !=1) %>%
   filter(dataset== "LEA") %>%
   select(dataset, domain, subject, norm_phon, word2vec_similarity,
@@ -254,9 +258,10 @@ summarise(ci = list(mean_cl_boot(value) %>%
            geom_bar(stat = "identity", position = "dodge", width = 0.7, color= "black")+
         geom_errorbar(aes(ymin=lwr, ymax=upr), size = 0.5, width=.1,
                 color = "black", position = position_dodge(0.75))+
-  scale_y_continuous(labels=scaleFUN)+
+  #scale_y_continuous(labels=scaleFUN)+
   theme_few()+
   scale_fill_few()+
+      scale_y_continuous(breaks = seq(0, 0.1, 0.04), limits = c(0, 0.1))+
   labs(x ="\nswitch method", y = "mean\nsimilarity", title = "phonological similarity")+
   #theme(aspect.ratio = 1)+
    theme(axis.title = element_text(size = rel(2.5)),
@@ -267,9 +272,9 @@ summarise(ci = list(mean_cl_boot(value) %>%
          axis.text.x = element_text(size = rel(2.5)))
 
 gridExtra::grid.arrange(semplot, phonplot, nrow = 2)
-
+```
 ## model
-
+```{r}
 switchmodel_data = fluency_data %>% filter(norm_phon != -999 & norm_phon !=1) %>%
   filter(dataset == "LEA") %>%
   select(dataset, domain,  subject,response, norm_phon, word2vec_similarity,
@@ -299,9 +304,12 @@ switchmodel = lme4::lmer(data = switchmodel_data,
 summary(switchmodel)
 ```
 
-## Fig 5: cluster switch figures
+## Fig 5 plot
+
+We obtained the plot from the raw data, and then edited its labels/colors in Powerpoint. The final plot is uploaded in the git repository.
 
 ```{r}
+scaleFUN <- function(x) sprintf("%.2f", x)
 fig = fluency_data[c(792:797, 209:214),]%>%
   mutate(troyer  = ifelse(row_number() == 1, 0,troyer),
          participant_designated_switch  = ifelse(row_number() == 1,
@@ -329,8 +337,8 @@ fig = fluency_data[c(792:797, 209:214),]%>%
 fig1 = fig %>% filter(subject == 2) %>%
   ggplot(aes(x = `retrieval order`, y = value, group = similarity)) +
   geom_line(aes(linetype = similarity),size = 1)+
-  geom_label(aes(label = response),label.size = NA, 
-             nudge_x = -.35, nudge_y = .01, size = 12)+
+  # geom_label(aes(label = response),label.size = NA, 
+  #            nudge_x = -.35, nudge_y = .01, size = 12)+
   labs(y = "similarity", x = "")+
   geom_vline(xintercept = 4, color = "goldenrod", linetype = "dashed")+
   geom_vline(xintercept = 5, color = "springgreen3", linetype = "dashed")+
@@ -347,6 +355,7 @@ fig1 = fig %>% filter(subject == 2) %>%
     theme_classic()+
   scale_color_colorblind()+
   scale_shape_manual(values=c(19, 15))+
+    scale_y_continuous(breaks = seq(0, 0.8, 0.2), limits = c(0, 0.6))+
    theme(axis.title = element_text(size = rel(2)),
          legend.title = element_text(face = "bold", hjust = .5, size = rel(2.5)),
          legend.text  = element_text(size = rel(2.5)),
@@ -359,8 +368,8 @@ fig1 = fig %>% filter(subject == 2) %>%
 fig2 = fig %>% filter(subject == 1) %>%
   ggplot(aes(x = `retrieval order`, y = value, group = similarity)) +
   geom_line(aes(linetype = similarity),size = 1)+
-  geom_label(aes(label = response),label.size = NA, 
-             nudge_x = -.35, nudge_y = .01, size = 12)+
+  # geom_label(aes(label = response),label.size = NA, 
+  #            nudge_x = -.35, nudge_y = .01, size = 12)+
   labs(y = "similarity", x = "retrieval order")+
   geom_vline(xintercept = 4, color = "goldenrod", linetype = "dashed")+
   geom_vline(xintercept = 5, color = "springgreen3", linetype = "dashed")+
@@ -376,6 +385,7 @@ fig2 = fig %>% filter(subject == 1) %>%
   #          size = 10, color = "goldenrod")+
     theme_classic()+
   scale_color_colorblind()+
+    scale_y_continuous(breaks = seq(0, 0.8, 0.2), limits = c(0, 0.6))+
   scale_shape_manual(values=c(19, 15))+
    theme(axis.title = element_text(size = rel(2)),
          legend.title = element_text(face = "bold", hjust = .5, size = rel(2.5)),
@@ -388,14 +398,13 @@ fig2 = fig %>% filter(subject == 1) %>%
 gridExtra::grid.arrange(fig1, fig2, nrow = 2)
 ```
 
-
 # Foraging Models
 
 Here, we first download the foraging models fit at the particpant level.
 
 ```{r}
 
-fluency_data_fits <- read.csv(sprintf("https://docs.google.com/uc?id=%s&export=download", '1djZ8XlGfl-d-tpAJVvJxqiToEQdLmwBd'))
+fluency_data_fits <- read_csv("newdata-fullfits.csv")
 
 data_labels = readxl::read_excel("data_fluency_cogsci2022.xlsx") %>% 
   select(subject, dataset) %>% distinct()
@@ -461,6 +470,8 @@ participanttestdata = participant_errors %>% filter(errortype == "optimal") %>%
 
 ```
 
+We perform the sign test for model fits. 
+
 ```{r}
 ## sign test
 
@@ -503,9 +514,9 @@ bestmodel = bestmodel %>% left_join(data_sum) %>%
 bestmodel
 ```
 
-# vocab
+# vocab construction
 
-This section goes over how the list of animals used in the foraging models was created. Please refer to the Jupyter notebook for more details.
+This section goes over how the list of animals used in the foraging models was created. Please refer to the Jupyter notebook for more details about the final stimuli.
 
 ```{r}
 data = readxl::read_excel("data_fluency_cogsci2022.xlsx")
@@ -539,15 +550,3 @@ animals = animals%>% mutate(freq = ifelse(is.na(freq), 0.5, freq))
 animals = animals %>% select(-freq2)
 write.csv(animals, file = "animals_frequencies.csv", row.names = FALSE)
 ```
-
-
-
-
-
-
-
-
-
-
-
-
